--- a/PrototypingMaterialsFDS.ipynb
+++ b/PrototypingMaterialsFDS.ipynb
@@ -23,7 +23,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import os\n",
@@ -46,7 +48,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "class matl_components:\n",
@@ -132,7 +136,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "class fds_matl:\n",
@@ -215,7 +221,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def compile_matl(initialise = None,\n",
@@ -268,14 +276,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "class matl_para:\n",
@@ -291,8 +303,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "mpar = matl_para()"
@@ -300,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +323,7 @@
        "'None'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,11 +334,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "mpar.mp['density'] = 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mpar.mp['density']"
    ]
   },
   {
@@ -335,30 +371,10 @@
     {
      "data": {
       "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "mpar.mp['density']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
        "'None'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,8 +386,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "class matl_components2:\n",
@@ -405,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -420,11 +438,13 @@
       "------------------\n",
       "\n",
       "\n",
-      "0\n",
-      "no reac\n",
       "&MATL ID = 'MaterialTest01',\n",
       "      DENSITY = 100.0,\n",
-      "      EMISSIVITY = 0.1 /\n"
+      "      EMISSIVITY = 0.1,\n",
+      "      SPECIFIC_HEAT = 4.19,\n",
+      "      N_REACTIONS = 1,\n",
+      "      A(1) = 10000,\n",
+      "      HEAT_OF_COMBUSTION(1) = 42000 /\n"
      ]
     },
     {
@@ -432,10 +452,14 @@
       "text/plain": [
        "[\"&MATL ID = 'MaterialTest01',\",\n",
        " '      DENSITY = 100.0,',\n",
-       " '      EMISSIVITY = 0.1 /']"
+       " '      EMISSIVITY = 0.1,',\n",
+       " '      SPECIFIC_HEAT = 4.19,',\n",
+       " '      N_REACTIONS = 1,',\n",
+       " '      A(1) = 10000,',\n",
+       " '      HEAT_OF_COMBUSTION(1) = 42000 /']"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,10 +505,13 @@
     "        self.heat_of_comb = heat_of_comb\n",
     "        self.heat_of_reac = heat_of_reac\n",
     "        \n",
-    "        self.param_base = [self.init, self.density, \n",
-    "                           self.emissivity, self.conductivity, \n",
-    "                           self.specific_heat, \n",
-    "                           self.heat_of_comb, self.heat_of_reac]\n",
+    "        self.param_base = [['init', self.init], \n",
+    "                           ['density', self.density], \n",
+    "                           ['emissivity', self.emissivity], \n",
+    "                           ['conductivity', self.conductivity], \n",
+    "                           ['specific_heat', self.specific_heat], \n",
+    "                           ['heat_of_comb', self.heat_of_comb], \n",
+    "                           ['heat_of_reac', self.heat_of_reac]]\n",
     "        \n",
     "        self.param_base_dict = {'init': self.init, \n",
     "                                'density': self.density, \n",
@@ -501,6 +528,15 @@
     "        self.reactions = []\n",
     "        \n",
     "        # Attempt to handle cases with only one reaction.\n",
+    "        self.reac_param_base2 = [['a', self.a], \n",
+    "                                 ['e', self.e], \n",
+    "                                 ['n_s', self.n_s],\n",
+    "                                 ['nu_matl', self.nu_matl], \n",
+    "                                 ['matl_id', self.matl_id], \n",
+    "                                 ['nu_spec', self.nu_spec],\n",
+    "                                 ['spec_id', self.spec_id], \n",
+    "                                 ['heat_of_comb', self.heat_of_comb],\n",
+    "                                 ['heat_of_reac', self.heat_of_reac]]\n",
     "        self.reac_param_base = [self.a, self.e, self.n_s,\n",
     "                                self.nu_matl, self.matl_id, self.nu_spec,\n",
     "                                self.spec_id, self.heat_of_comb,\n",
@@ -530,6 +566,7 @@
     "        \n",
     "        new_reac = {'a': self.a, \n",
     "                    'e': self.e, \n",
+    "                    'n_s': self.n_s,\n",
     "                    'nu_matl': self.nu_matl, \n",
     "                    'matl_id': self.matl_id, \n",
     "                    'nu_spec': self.nu_spec, \n",
@@ -542,21 +579,36 @@
     "    def compile_matl(self, show=False):\n",
     "        matl_lines = []\n",
     "        num_reac = len(self.reactions)\n",
+    "        reac_count = 1\n",
     "        \n",
     "        if num_reac is 0:\n",
     "            print('no reac')\n",
     "        \n",
-    "        for component in self.param_base_dict:\n",
-    "            idfr = '{}'.format(component)\n",
+    "        for component in self.param_base[:-2]:\n",
+    "            idfr = '{}'.format(component[0])\n",
     "            \n",
     "            if self.param_base_dict[idfr] is not None:\n",
     "                comp = self.matl_temp[idfr]\n",
-    "                if component is not 'init':\n",
+    "                if component[0] is not 'init':\n",
     "                    comp = '      ' + comp\n",
     "                \n",
-    "                new_c = comp.format(self.param_base_dict[idfr])+','\n",
+    "                new_c = comp.format(self.param_base_dict[idfr])\n",
     "                #print(new_c)\n",
-    "                matl_lines.append(new_c)\n",
+    "                matl_lines.append(new_c + ',')\n",
+    "            \n",
+    "        new_c = \"      \" + self.matl_temp['n_reactions'].format(num_reac)\n",
+    "        matl_lines.append(new_c + ',')\n",
+    "        \n",
+    "        for reac_dict in self.reactions:\n",
+    "            \n",
+    "            for reac_para in self.reac_param_base2:\n",
+    "                idfr = '{}'.format(reac_para[0])\n",
+    "                \n",
+    "                if reac_dict[idfr] is not None:\n",
+    "                    new_c = \"      \" + self.matl_temp[idfr].format(reac_count, \n",
+    "                                                                   reac_dict[idfr])\n",
+    "                    matl_lines.append(new_c + ',')\n",
+    "            reac_count += 1\n",
     "        \n",
     "        matl_lines[-1] = matl_lines[-1][:-1] + ' /'\n",
     "        \n",
@@ -624,7 +676,8 @@
     "        return output\n",
     "\n",
     "\n",
-    "fm2 = fds_matl_2('MaterialTest01', density=100., emissivity=0.1)\n",
+    "fm2 = fds_matl_2('MaterialTest01', density=100., emissivity=0.1, \n",
+    "                 specific_heat=4.19, heat_of_comb=42000, a=10000)\n",
     "print(fm2)\n",
     "\n",
     "nml = fm2.compile_matl(show=True)\n",
@@ -633,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -657,6 +710,7 @@
       "------------------\n",
       "  a: 120.0\n",
       "  e: 200\n",
+      "  n_s: None\n",
       "  nu_matl: None\n",
       "  matl_id: None\n",
       "  nu_spec: None\n",
@@ -669,6 +723,7 @@
       "------------------\n",
       "  a: 221.0\n",
       "  e: 210\n",
+      "  n_s: None\n",
       "  nu_matl: None\n",
       "  matl_id: None\n",
       "  nu_spec: None\n",
@@ -677,8 +732,33 @@
       "  heat_of_reac: None\n",
       "------------------\n",
       "\n",
-      "\n"
+      "\n",
+      "&MATL ID = 'MaterialTest02',\n",
+      "      DENSITY = 200.0,\n",
+      "      EMISSIVITY = 0.2,\n",
+      "      N_REACTIONS = 2,\n",
+      "      A(1) = 120.0,\n",
+      "      E(1) = 200,\n",
+      "      A(2) = 221.0,\n",
+      "      E(2) = 210 /\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[\"&MATL ID = 'MaterialTest02',\",\n",
+       " '      DENSITY = 200.0,',\n",
+       " '      EMISSIVITY = 0.2,',\n",
+       " '      N_REACTIONS = 2,',\n",
+       " '      A(1) = 120.0,',\n",
+       " '      E(1) = 200,',\n",
+       " '      A(2) = 221.0,',\n",
+       " '      E(2) = 210 /']"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -690,12 +770,13 @@
     "\n",
     "print(fm3)\n",
     "# print(fm3.reactions)\n",
-    "fm3.show_reactions()"
+    "fm3.show_reactions()\n",
+    "fm3.compile_matl(show=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -719,6 +800,7 @@
       "------------------\n",
       "  a: 320.0\n",
       "  e: 600\n",
+      "  n_s: None\n",
       "  nu_matl: None\n",
       "  matl_id: None\n",
       "  nu_spec: None\n",
@@ -744,14 +826,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -772,7 +858,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
