--- a/PrototypingMaterialsFDS.ipynb
+++ b/PrototypingMaterialsFDS.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "metadata": {
     "scrolled": true
    },
@@ -100,7 +100,7 @@
        "\"      SPEC_ID(1,1) = 'test'\""
       ]
      },
-     "execution_count": 3,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
        "\"      SPEC_ID({},{}) = '{}'\""
       ]
      },
-     "execution_count": 4,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,7 @@
        "'TestMatl'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +202,7 @@
        "<function __main__.fds_matl.compile_matl>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +255,7 @@
        "[\"&MATL ID = 'TestMatl'\"]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +309,7 @@
        "'None'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +338,7 @@
        "2"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +358,7 @@
        "'None'"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,8 +418,8 @@
     "                 'burn_away': \"BURN_AWAY = .{}.\", \n",
     "                 'layer_div': \"LAYER_DIVIDE = {}\", \n",
     "                 'thickness': \"THICKNESS({}) = {}\", \n",
-    "                 'matl_id': \"MATL_ID({}) = '{}'\", \n",
-    "                 'matl_mass_frac': \"MATL_MASS_FRACTION({}) = '{}'\", }\n",
+    "                 'matl_id': \"MATL_ID({}) = {}\", \n",
+    "                 'matl_mass_frac': \"MATL_MASS_FRACTION({}) = {}\", }\n",
     "    \n",
     "    def __init__(self, init, ext_flux=None, rgb=None,  \n",
     "                 tga_analysis=None, tga_heat_rate=None, \n",
@@ -478,7 +478,7 @@
     "                                ['matl_mass_frac', self.matl_mass_frac]]\n",
     "        \n",
     "        for i in self.matl_param_base:\n",
-    "            if i is not None:\n",
+    "            if i[1] is not None:\n",
     "                self.add_material(self.thickness,\n",
     "                                  self.matl_id,\n",
     "                                  self.matl_mass_frac)\n",
@@ -517,20 +517,73 @@
     "                #print(new_c)\n",
     "                surf_lines.append(new_c + ',')\n",
     "        \n",
+    "        thick_comp = \"{}, \"\n",
+    "        id_list = []\n",
+    "        mass_frac_list = []\n",
+    "        comp_id_temp = '{},{}:{}' \n",
+    "        matl_comp_count = 1\n",
+    "        thicknesses = ''\n",
+    "        \n",
     "        # Add different materials.\n",
     "        for matl_dict in self.materials:\n",
+    "            print('len matl_dict',len(self.materials))\n",
     "            \n",
-    "            for matl_para in self.matl_param_base:\n",
-    "                idfr = '{}'.format(matl_para[0])\n",
+    "            # Check if material(s) are provided, by using the existance\n",
+    "            # of thickness as an indicator.\n",
+    "            idfr = 'thickness'\n",
+    "            if matl_dict[idfr] is not None:\n",
+    "                matl_ids = len(matl_dict['matl_id'])\n",
     "                \n",
-    "                if matl_dict[idfr] is not None:\n",
-    "                    new_c = \"      \" + self.surf_temp[idfr].format(matl_count, \n",
-    "                                                                   matl_dict[idfr])\n",
-    "                    surf_lines.append(new_c + ',')\n",
-    "            matl_count += 1\n",
-    "            \n",
+    "                # Determine the amount of materials and collect their\n",
+    "                # thicknesses in a single string.\n",
+    "                thick_num = '1:{}'.format(len(self.materials))\n",
+    "                thicknesses += thick_comp.format(matl_dict[idfr])\n",
+    "                \n",
+    "                # Collect the different material ids \n",
+    "                # for a material components.\n",
+    "                idfr = 'matl_id'\n",
+    "                comp_id = comp_id_temp.format(matl_comp_count,\n",
+    "                                              '1', matl_ids)\n",
+    "                ml = ''\n",
+    "                for md in matl_dict[idfr]:\n",
+    "                    ml += \"'{}', \".format(md)\n",
+    "                ml = ml[:-2]\n",
+    "                new_c = \"      \" + self.surf_temp[idfr].format(comp_id,\n",
+    "                                                               ml)\n",
+    "                id_list.append(new_c)\n",
+    "                \n",
+    "                # Collect the different mass fractions\n",
+    "                # for the material components.\n",
+    "                idfr = 'matl_mass_frac'\n",
+    "                comp_id = comp_id_temp.format(matl_comp_count,\n",
+    "                                              '1', matl_ids)\n",
+    "                mf = ''\n",
+    "                for md in matl_dict[idfr]:\n",
+    "                    mf += \"'{}', \".format(md)\n",
+    "                mf = mf[:-2]\n",
+    "                new_c = \"      \" + self.surf_temp[idfr].format(comp_id,\n",
+    "                                                               mf)\n",
+    "                mass_frac_list.append(new_c)\n",
+    "                \n",
+    "                matl_comp_count += 1\n",
+    "        \n",
+    "        # Create the thickness input line.\n",
+    "        new_thick = \"      \" + self.surf_temp['thickness'].format(thick_num,\n",
+    "                                                                  thicknesses[:-1])\n",
+    "        surf_lines.append(new_thick)\n",
+    "        \n",
+    "        # Append the various material id lines.\n",
+    "        for m_id in id_list:\n",
+    "            surf_lines.append(m_id + ',')\n",
+    "        \n",
+    "        # Append the various material mass fraction lines.\n",
+    "        for m_fr in mass_frac_list:\n",
+    "            surf_lines.append(m_fr + ',')\n",
+    "        \n",
+    "        # Remove the last comma.\n",
     "        surf_lines[-1] = surf_lines[-1][:-1] + ' /\\n'\n",
     "        \n",
+    "        # Print results to the screen, if desired.\n",
     "        if show is True:\n",
     "            for line in surf_lines:\n",
     "                print(line)\n",
@@ -547,13 +600,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'thickness': 0.5, 'matl_id': None, 'matl_mass_frac': None}]\n",
+      "[{'thickness': 0.5, 'matl_id': ['GreenStuff'], 'matl_mass_frac': [0.42]}]\n",
+      "len matl_dict 1\n",
       "&SURF ID = 'Cable 219 plastic',\n",
       "      EXTERNAL_FLUX = 25.0,\n",
       "      RGB = 200,100,0,\n",
       "      BACKING = 'EXPOSED',\n",
       "      BURN_AWAY = .TRUE.,\n",
-      "      THICKNESS(1) = 0.5 /\n",
+      "      THICKNESS(1:1) = 0.5,\n",
+      "      MATL_ID(1,1:1) = 'GreenStuff',\n",
+      "      MATL_MASS_FRACTION(1,1:1) = '0.42' /\n",
       "\n"
      ]
     },
@@ -565,7 +621,9 @@
        " '      RGB = 200,100,0,',\n",
        " \"      BACKING = 'EXPOSED',\",\n",
        " '      BURN_AWAY = .TRUE.,',\n",
-       " '      THICKNESS(1) = 0.5 /\\n']"
+       " '      THICKNESS(1:1) = 0.5,',\n",
+       " \"      MATL_ID(1,1:1) = 'GreenStuff',\",\n",
+       " \"      MATL_MASS_FRACTION(1,1:1) = '0.42' /\\n\"]"
       ]
      },
      "execution_count": 39,
@@ -574,8 +632,9 @@
     }
    ],
    "source": [
-    "fs1 = FDSSURF('Cable 219 plastic', ext_flux=25., rgb='200,100,0', \n",
-    "                 backing='EXPOSED', burn_away='TRUE', thickness=0.5)\n",
+    "fs1 = FDSSURF('Cable 219 plastic', ext_flux=25., rgb='200,100,0',\n",
+    "              backing='EXPOSED', burn_away='TRUE', thickness=0.5,\n",
+    "              matl_id=['GreenStuff'], matl_mass_frac=[0.42])\n",
     "\n",
     "nsl = fs1.compile_surf(show=True)\n",
     "nsl"
@@ -594,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -633,7 +692,7 @@
        " '      HEAT_OF_COMBUSTION(1) = 42000 /\\n']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -872,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -949,7 +1008,7 @@
        " '      HEAT_OF_COMBUSTION(2) = 1200 /\\n']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -969,7 +1028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1020,7 +1079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
